objects/SFDocumentor__Apex_Trigger__c.object
<CustomObject>
    <description>Collection of all Apex Triggers available in current Org</description>
    <fields>
        <fullName>SFDocumentor__ApiVersion__c</fullName>
        <label>Api Version</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__BodyCrc__c</fullName>
        <label>BodyCrc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__CreatedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CreatedBy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Created_by_Name__c</fullName>
        <label>Created by Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isActive?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__IsValid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Valid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Is_After_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is After Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Is_After_Insert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is After Insert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Is_After_UnDelete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is After UnDelete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Is_After_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is After Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Is_Before_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Before Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Is_Before_Insert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Before Insert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Is_Before_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Before Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Is_Without_Comment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Without Comments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__LastModifiedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LastModifiedBy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Last_Sync_Date__c</fullName>
        <label>Last SFDoc Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__LengthWithoutComments__c</fullName>
        <label>Length Without Comments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Link_URL__c</fullName>
        <formula>HYPERLINK(SFDocumentor__Link__c , Name ,&apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Setup Link/URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Link__c</fullName>
        <label>Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Object_Name__c</fullName>
        <label>Object Name</label>
        <referenceTo>SFDocumentor__Object_Collection__c</referenceTo>
        <relationshipName>Object_Name</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__SFDocumentorDesc__c</fullName>
        <label>SFDoc Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Used</fullName>
                </value>
                <value>
                    <fullName>Unused</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDocumentor__SystemModstamp__c</fullName>
        <label>SystemModstamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Total_Trigger_Length__c</fullName>
        <label>Total Trigger Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Trigger_Id__c</fullName>
        <externalId>true</externalId>
        <label>Trigger Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Trigger_Points__c</fullName>
        <label>Trigger Points</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Apex Trigger Collection</label>
    <listViews>
        <fullName>SFDocumentor__All</fullName>
        <columns>NAME</columns>
        <columns>SFDocumentor__ApiVersion__c</columns>
        <columns>SFDocumentor__Trigger_Points__c</columns>
        <columns>SFDocumentor__Object_Name__c</columns>
        <columns>SFDocumentor__Trigger_Id__c</columns>
        <columns>SFDocumentor__Status__c</columns>
        <columns>SFDocumentor__Link_URL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Apex Trigger Collection</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Apex Trigger Collections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>